# node-eyeliner

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json
.github/: dependabot.yml
benchmark/: README.md  package-lock.json  package.json  rollup.config.js
benchmark/src/: index.js
native/: .gitignore  Cargo.toml  index.d.ts
native/src/: js_object_utils.rs  lib.rs  options.rs  resources.rs  settings.rs
