[package]
name = "node-eyeliner"
version = "0.0.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "node_eyeliner"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.5.3"

[dependencies]
neon = "0.3.1"
eyeliner = { git = "https://github.com/dfrankland/eyeliner.git" }
