[package]
name = "node-eyeliner"
version = "0.0.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "node_eyeliner"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.8.3"
eyeliner = { git = "https://github.com/dfrankland/eyeliner.git" }
